fix quote in quote treatment, now working propely. Add handle_quotes() in parse to deal with it. Passing all tests.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"name": "(gdb) Launch",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/my_shell",
+			"program": "${workspaceFolder}/minishell",
 			"args": [],
 			"stopAtEntry": true,
 			"cwd": "${fileDirname}",
